Add support for biwise operations in endicheck.

--- a/endicheck/tests/Makefile.am
+++ b/endicheck/tests/Makefile.am
@@ -11,3 +11,6 @@ EXTRA_DIST += simple_incorrect.vgtest simple_incorrect.stderr.exp
 
 check_PROGRAMS += memcmpy_correct
 EXTRA_DIST += memcmpy_correct.vgtest memcmpy_correct.stderr.exp
+
+check_PROGRAMS += bitop
+EXTRA_DIST += bitop.vgtest bitop.stderr.exp
