Add support for protected regions.
Also a bug where the shadow memory was clobbered when --track-origins
was on was fixed.

The protected memory system needed proper helpers for all store
operations in ec_shadow. The load operations should also get this
treatment.

--- a/endicheck/tests/Makefile.am
+++ b/endicheck/tests/Makefile.am
@@ -23,3 +23,6 @@ EXTRA_DIST += bitpack.vgtest bitpack.stderr.exp
 
 check_PROGRAMS += origins
 EXTRA_DIST += origins.vgtest origins.stderr.exp
+
+check_PROGRAMS += protection
+EXTRA_DIST += protection.vgtest protection.stderr.exp
