Fix test name typo (memcmpy -> memcpy).

--- a/endicheck/tests/Makefile.am
+++ b/endicheck/tests/Makefile.am
@@ -9,8 +9,8 @@ EXTRA_DIST += simple_correct.stderr.exp simple_correct.vgtest
 check_PROGRAMS += simple_incorrect
 EXTRA_DIST += simple_incorrect.vgtest simple_incorrect.stderr.exp
 
-check_PROGRAMS += memcmpy_correct
-EXTRA_DIST += memcmpy_correct.vgtest memcmpy_correct.stderr.exp
+check_PROGRAMS += memcpy_correct
+EXTRA_DIST += memcpy_correct.vgtest memcpy_correct.stderr.exp
 
 check_PROGRAMS += bitop
 EXTRA_DIST += bitop.vgtest bitop.stderr.exp
