Add more vector instructions (fixes calloc and memset).
When memset is implemented using the SSE/AVX instructions, it was
hitting unimplemented instructions which in turn made the result NATIVE,
but instead it should be ANY, because it comes from the single byte
given to memset.

--- a/endicheck/tests/Makefile.am
+++ b/endicheck/tests/Makefile.am
@@ -30,3 +30,6 @@ EXTRA_DIST += protection.vgtest protection.stderr.exp
 check_PROGRAMS += load_store
 load_store_CFLAGS = -mavx
 EXTRA_DIST += load_store.vgtest load_store.stderr.exp
+
+check_PROGRAMS += calloc_is_any
+EXTRA_DIST += calloc_is_any.vgtest calloc_is_any.stderr.exp
