Always mark the first byte as any.
This should help lower false positive rate. In future, this could be
made into an option. A new test added and made to pass is casted_byte.c.

It also has drawbacks: error reporting is less precise, since it does
not mention the first byte. This should be fixed by a suitable
heuristic, however.

--- a/endicheck/tests/Makefile.am
+++ b/endicheck/tests/Makefile.am
@@ -35,3 +35,6 @@ EXTRA_DIST += load_store.vgtest load_store.stderr.exp
 
 check_PROGRAMS += calloc_is_any
 EXTRA_DIST += calloc_is_any.vgtest calloc_is_any.stderr.exp
+
+check_PROGRAMS += casted_byte
+EXTRA_DIST += casted_byte.vgtest casted_byte.stderr.exp
