Fix broken reference to renamed ec_include.h.

--- a/endicheck/Makefile.am
+++ b/endicheck/Makefile.am
@@ -8,7 +8,7 @@ pkginclude_HEADERS = \
 	endicheck.h
 
 noinst_HEADERS = \
-	ec_include.h \
+	ec_main.h \
 	ec_shadow.h
 
 #----------------------------------------------------------------------------
