--- a/Makefile.vex.am
+++ b/Makefile.vex.am
@@ -28,7 +28,8 @@ pkginclude_HEADERS = \
 	pub/libvex_guest_mips64.h \
 	pub/libvex_s390x_common.h \
 	pub/libvex_ir.h \
-	pub/libvex_trc_values.h
+	pub/libvex_trc_values.h \
+	pub/libvex_inner.h
 
 noinst_HEADERS = \
 	priv/main_globals.h \
